<resources>
    <string name="app_name">Farmer Express</string>
    <string name="title_home">होम</string>
    <string name="title_buy">खरीदे</string>
    <string name="title_sell">बेचे</string>
    <string name="title_question">सवाल - जवाब</string>
    <string name="title_profile">प्रोफाइल</string>
    <string name="title_info">जानकारी</string>
    <string name="title_game">गेम खेले</string>
    <string name="title_news">न्यूज पढे</string>
    <string name="title_signout">लॉग आउट </string>
    <string name="title_recharge">रिचार्ज</string>
    <string name="title_state">अपना राज्य चुने</string>
    <string name="title_operator">अपना सिम ऑपरेटर चुने</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Info fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <array name="list_option">
        <item>पोस्ट को हटाए</item>
        <item>पोस्ट को छिपाए</item>
        <item>पोस्ट की शिकायत करें</item>
    </array>
</resources>