<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_buy"
            android:icon="@drawable/buyicon"
            android:title="@string/title_buy" />

        <item
            android:id="@+id/navigation_sell"
            android:icon="@drawable/ic_outline_add_circle_24"

            android:title="@string/title_sell" />

        <item
            android:id="@+id/navigation_question"
            android:icon="@drawable/question"
            android:title="@string/title_question" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/title_profile" />

        <item
            android:id="@+id/navigation_recharge"
            android:icon="@drawable/ic_recharge"
            android:title="@string/title_recharge" />

        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/info"
            android:title="@string/title_info" />

    </group>
</menu>