<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_buy"
        android:icon="@drawable/buyicon"
        android:title="@string/title_buy" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_outline_add_circle_24"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_question"
        android:icon="@drawable/question"
        android:title="@string/title_question" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/info"
        android:title="@string/title_info" />

</menu>